Up til M (no map)

--- a/Green willow.html
+++ b/Green willow.html
@@ -36,16 +36,16 @@
 
 <img src="images/care.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-<h2> Care & Maitnence </h2>
+<h2> Care & Maintenance </h2>
 
 <p class="textblock">
-Spring-time:<br>
+Springtime:<br>
 Mulch
 <br><br>
 May, June, July, August:<br>
-Watch for inset burrowing. <br>
+Watch for insect burrowing. <br>
 Trim diseased stalks. <br>
-Remove invested clippings from site.
+Remove infested clippings from site.
 <br><br>
 November, December, January: <br>
 Prune in dormancy.
@@ -68,11 +68,11 @@ Prune in dormancy.
           <h2> Harvest </h2>
 
           <p class="textblock">
-            December,January:<br>
+            December, January:<br>
             when dormant clippings can be harvested for basketry.
 <br><br>
             Mid-spring:<br>
-            harvest the bark of spring pruning clippings for weaving.
+            Harvest the bark of spring pruning clippings for weaving.
 
            </p>        </div>
 
@@ -89,7 +89,7 @@ Prune in dormancy.
 
           <p class="textblock">
           Basketry:
-          Willow whips (young tree growth) and bark from spring clippings. </p>        </div>
+          <span><i>Crack!</i><span> Use willow whips (young tree growth) and bark from spring clippings. </p>        </div>
 <!-- End of uses info -->
 <br>
 <!-- IDENTIFICATION DESCRIPTION 💌 -->
@@ -101,16 +101,16 @@ Prune in dormancy.
 
           <h2> Plant Identification </h2>
 
-          <p class="textblock"> <a href="http://beta.floranorthamerica.org/Salix_triandra" style="text-decoration: underline;"> Hyperlink to information on identifying green willow. </a> </p>        </div>
+          <p class="textblock"> <a href="http://beta.floranorthamerica.org/Salix_triandra" style="text-decoration: underline;"> How to identifying green willow. </a> </p>        </div>
 <!-- End of Plant identification -->
 <br>
 <!-- ORGINS 💌 -->
 
-        <button class="icons" onclick="showhide('orginsinfo')"><p> Orgins<p> </button>
+        <button class="icons" onclick="showhide('orginsinfo')"><p> Origins<p> </button>
         <div id="orginsinfo" class="infoblock" style="display:none">
           <img src="images/orgins.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-          <h2> Orgins </h2>
+          <h2> Origins </h2>
 
           <p class="textblock"> Europe and Western and Central Asia. </p>        </div>
 <!-- End of orgins -->
@@ -124,7 +124,7 @@ Prune in dormancy.
 
           <h2> Stories </h2>
 
-          <p class="textblock"> Share your stories with green willow with earthandmapping(at)gmail.com. </p>        </div>
+          <p class="textblock"> Share your stories about green willow with earthandmapping(at)gmail.com. </p>        </div>
       </div>
 <!-- End of stories -->
 
@@ -132,12 +132,12 @@ Prune in dormancy.
       <div class= "column_layout" class="infoblock">
 
 <!-- PLANT NAME AND LATIN -->
-          <h1> Green willow, black maul willow ( Salix triandra) </h1>
+          <h1> Green willow or black maul willow &nbsp; <i>Salix triandra</i> </h1>
       </div>
 
 <!-- EXIT PAGE BUTTONS -->
-          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> ~Keep Walking~</a></button>
-          <button class="gohome"> <a href="map.html">~Back to Map~</a></button>
+          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> <sub>~</sub>Keep Walking<sub>~</sub></a></button>
+          <button class="gohome"> <a href="map.html"><sub>~</sub>Back to Map<sub>~</sub></a></button>
 
     </div>
 
