--- a/Hazel.html
+++ b/Hazel.html
@@ -36,10 +36,10 @@
 
 <img src="images/care.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-<h2> Care & Maitnence </h2>
+<h2> Care & Maintenance </h2>
 
 <p class="textblock"> All year: <br>
-Inspect hazel tree for fungus--remove immediately. <br>
+Inspect hazel tree for fungus--remove immediately. <span><i>Out, damned spot</i></span> <br>
 Dispose of clippings far away.  </p>
 
 
@@ -59,10 +59,10 @@ Dispose of clippings far away.  </p>
           <h2> Harvest </h2>
 
           <p class="textblock">
-Rods at the base of tree are harvested every four to six years.
+Rods at the base of a tree are harvested every four to six years.
 <br><br>
 September, October:<br>
-Harvest nuts
+Harvest nuts.
 <br><br>
 November, December, January:<br>
 Prune in dormancy. <br>
@@ -102,11 +102,11 @@ Sticks and branches for staves and wattle weaving.
 <br>
 <!-- ORGINS 💌 -->
 
-        <button class="icons" onclick="showhide('orginsinfo')"><p> Orgins<p> </button>
+        <button class="icons" onclick="showhide('orginsinfo')"><p> Origins<p> </button>
         <div id="orginsinfo" class="infoblock" style="display:none">
           <img src="images/orgins.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-          <h2> Orgins </h2>
+          <h2> Origins </h2>
 
           <p class="textblock"> Europe and Asia. </p>        </div>
 <!-- End of orgins -->
@@ -128,12 +128,12 @@ Sticks and branches for staves and wattle weaving.
       <div class= "column_layout" class="infoblock">
 
 <!-- PLANT NAME AND LATIN -->
-          <h1> Hazel tree (Corylus) </h1>
+          <h1> Hazel tree &nbsp; <i>Corylus avellana</i> </h1>
       </div>
 
 <!-- EXIT PAGE BUTTONS -->
-          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> ~Keep Walking~</a></button>
-          <button class="gohome"> <a href="map.html">~Back to Map~</a></button>
+          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> <sub>~</sub>Keep Walking<sub>~</sub></a></button>
+          <button class="gohome"> <a href="map.html"><sub>~</sub>Back to Map<sub>~</sub></a></button>
 
     </div>
 
