--- a/Iris.html
+++ b/Iris.html
@@ -36,15 +36,15 @@
 
 <img src="images/care.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-<h2> Care & Maitnence </h2>
+<h2> Care & Maintenance </h2>
 
 <p class="textblock">
 
 August, Early September: <br>
-Cut back ~~gently.<br><br>
+Cut back. <span><i>Gently.</i><span><br><br>
 
 October:<br>
-Cut back ---more
+Cut back --- <span><i>More!</i><span>
  </p>
 
         </div>
@@ -66,7 +66,7 @@ Cut back ---more
       August, September, October:
       <br>
       Collect golden leaves. <br>
-      A gentle pull should release it.   </p>        </div>
+      A gentle pull should release the leaf.   </p>        </div>
 
 <!-- End of harvest info  -->
 <br>
@@ -80,7 +80,7 @@ Cut back ---more
           <h2> Uses </h2>
 
           <p class="textblock"> Leaves: papermaking, soft basketry, cordage.<br>
-                                Flowers: botranical prints and inks.  </p>        </div>
+                                Flowers: botanical prints and inks.  </p>        </div>
 <!-- End of uses info -->
 <br>
 <!-- IDENTIFICATION DESCRIPTION 💌 -->
@@ -97,11 +97,11 @@ Cut back ---more
 <br>
 <!-- ORGINS 💌 -->
 
-        <button class="icons" onclick="showhide('orginsinfo')"><p> Orgins<p> </button>
+        <button class="icons" onclick="showhide('orginsinfo')"><p> Origins<p> </button>
         <div id="orginsinfo" class="infoblock" style="display:none">
           <img src="images/orgins.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-          <h2> Orgins </h2>
+          <h2> Origins </h2>
 
           <p class="textblock">  </p>        </div>
 <!-- End of orgins -->
@@ -115,7 +115,7 @@ Cut back ---more
 
           <h2> Stories </h2>
 
-          <p class="textblock">  </p> Share your stories about hazel trees with earthandmapping(at)gmail.com.   </div>
+          <p class="textblock">  </p> Share your stories about irises with earthandmapping(at)gmail.com.   </div>
       </div>
 <!-- End of stories -->
 
@@ -123,12 +123,12 @@ Cut back ---more
       <div class= "column_layout" class="infoblock">
 
 <!-- PLANT NAME AND LATIN -->
-          <h1> Iris </h1>
+          <h1> Iris &nbsp; <i>Iris germanica</i></h1>
       </div>
 
 <!-- EXIT PAGE BUTTONS -->
-          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> ~Keep Walking~</a></button>
-          <button class="gohome"> <a href="map.html">~Back to Map~</a></button>
+          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> <sub>~</sub>Keep Walking<sub>~</sub></a></button>
+          <button class="gohome"> <a href="map.html"><sub>~</sub>Back to Map<sub>~</sub></a></button>
 
     </div>
 
