--- a/Lupine.html
+++ b/Lupine.html
@@ -38,7 +38,7 @@
 
 <h2> Care & Maitnence </h2>
 
-<p class="textblock"> Leave old flowering stalks as pollinator homes through the winter </p>
+<p class="textblock"> Leave old flowering stalks for pollinators to home in over winter. </p>
 
 
         </div>
@@ -58,7 +58,7 @@
 
           <p class="textblock">
             March, April: <br>
-            Harvest leaves before flowering occurs for best colour </p>        </div>
+            Harvest leaves before flowering occurs for best colour. </p>        </div>
 
 <!-- End of harvest info  -->
 <br>
@@ -74,7 +74,7 @@
           <p class="textblock">
              ~ Pollinator friendly ~ early spring bee forage.
             <br>
-             Leaves and flowers harvested for botnaical printing</p>        </div>
+             Leaves and flowers are harvested for botanical printing.</p>        </div>
 <!-- End of uses info -->
 <br>
 <!-- IDENTIFICATION DESCRIPTION 💌 -->
@@ -86,16 +86,16 @@
 
           <h2> Plant Identification </h2>
 
-          <p class="textblock"> <a href="http://linnet.geog.ubc.ca/Atlas/Atlas.aspx?sciname=Lupinus%20polyphyllus" style="text-decoration: underline;"> Hyperlink to information on identifying lupines.</a></p>        </div>
+          <p class="textblock"> <a href="http://linnet.geog.ubc.ca/Atlas/Atlas.aspx?sciname=Lupinus%20polyphyllus" style="text-decoration: underline;"> How to identifying lupines.</a></p>        </div>
 <!-- End of Plant identification -->
 <br>
 <!-- ORGINS 💌 -->
 
-        <button class="icons" onclick="showhide('orginsinfo')"><p> Orgins<p> </button>
+        <button class="icons" onclick="showhide('orginsinfo')"><p> Origins<p> </button>
         <div id="orginsinfo" class="infoblock" style="display:none">
           <img src="images/orgins.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-          <h2> Orgins </h2>
+          <h2> Origins </h2>
 
           <p class="textblock"> info on the care and maintnece of weld. </p>        </div>
 <!-- End of orgins -->
@@ -117,12 +117,12 @@
       <div class= "column_layout" class="infoblock">
 
 <!-- PLANT NAME AND LATIN -->
-          <h1> Lupine (Lupinus polyphyllus)</h1>
+          <h1> Lupine &nbsp; <i>Lupinus polyphyllus</i></h1>
       </div>
 
 <!-- EXIT PAGE BUTTONS -->
-          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> ~Keep Walking~</a></button>
-          <button class="gohome"> <a href="map.html">~Back to Map~</a></button>
+          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> <sub>~</sub>Keep Walking<sub>~</sub></a></button>
+          <button class="gohome"> <a href="map.html"><sub>~</sub>Back to Map<sub>~</sub></a></button>
 
     </div>
 
