--- a/Madder root.html
+++ b/Madder root.html
@@ -36,16 +36,16 @@
 
 <img src="images/care.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-<h2> Care & Maitnence </h2>
+<h2> Care & Maintenance </h2>
 
 <p class="textblock">
-  Rotate area of harvest every 3-4 years.
+  Rotate area of harvest every 3 to 4 years.
   <br><br>
   March, April, May, June:
   <br><br>
   Trellis, <br>
-  add lime to soil,  <br>
-  lay down new spring growth before 18 inchs high. <br>
+  Add lime to soil.  <br>
+  Lay down new spring growth before 18 inches tall. <br>
   Cover in soil to promote new roots.
  </p>
 
@@ -81,10 +81,10 @@
           <h2> Uses </h2>
 
           <p class="textblock">
-          Madder: a four colour, one pot dye <br>
-          As followed: <br>
-          yellow, Red, pink, brown. <br>
-          n/a, alum, exhast, soda-ash. <br>
+          Madder: a four colour, one-pot dye <br>
+          As follows: <br>
+          Yellow, Red, Pink, Brown. <br>
+          N/A, alum, exhast, soda-ash. <br>
 
           </p>        </div>
 <!-- End of uses info -->
@@ -98,18 +98,18 @@
 
           <h2> Plant Identification </h2>
 
-          <p class="textblock"> <a href="https://gobotany.nativeplanttrust.org/species/rubia/tinctoria/" style="text-decoration:underline;"> Hyperlink to information on identifying madder root. </a> <br> Tip! The stem feels like a cat's tounge. </p>        </div>
+          <p class="textblock"> <a href="https://gobotany.nativeplanttrust.org/species/rubia/tinctoria/" style="text-decoration:underline;"> How to identifying madder root. </a> <br> Tip! The stem feels like a cat's tounge. </p>        </div>
 <!-- End of Plant identification -->
 <br>
 <!-- ORGINS 💌 -->
 
-        <button class="icons" onclick="showhide('orginsinfo')"><p> Orgins<p> </button>
+        <button class="icons" onclick="showhide('orginsinfo')"><p> Origins<p> </button>
         <div id="orginsinfo" class="infoblock" style="display:none">
           <img src="images/orgins.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-          <h2> Orgins </h2>
+          <h2> Origins </h2>
 
-          <p class="textblock"> Mediterranean, Europe. </p>        </div>
+          <p class="textblock"> Mediterranean Basin, Europe. </p>        </div>
 <!-- End of orgins -->
 <br>
 <!-- STORIES 💌 -->
@@ -129,12 +129,12 @@
       <div class= "column_layout" class="infoblock">
 
 <!-- PLANT NAME AND LATIN -->
-          <h1> Madder root (Rubia tinctorum)</h1>
+          <h1> Madder root &nbsp; <i>Rubia tinctorum</i></h1>
       </div>
 
 <!-- EXIT PAGE BUTTONS -->
-          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> ~Keep Walking~</a></button>
-          <button class="gohome"> <a href="map.html">~Back to Map~</a></button>
+          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> <sub>~</sub>Keep Walking<sub>~</sub></a></button>
+          <button class="gohome"> <a href="map.html"><sub>~</sub>Back to Map<sub>~</sub></a></button>
 
     </div>
 
