--- a/Milkweed.html
+++ b/Milkweed.html
@@ -36,20 +36,20 @@
 
 <img src="images/care.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-<h2> Care & Maitnence </h2>
+<h2> Care & Maintenance </h2>
 
 <p class="textblock">
   Low maintenance.
   <br>
   Drought tolerant.
   <br> <br>
-  **avoid skin contact with latex when handling**
+  ** Avoid skin contact with latex when handling **
   <br><br>
   Winter:
   <br>
   Keep some stalks standing
   <br>
-  as pollinator habitat.
+  as pollinators' habitat.
  </p>
 
 
@@ -71,14 +71,13 @@
           <p class="textblock">
 September, October:
 <br>
- ~silky ~seedpods for fibre.
+ ~silky~ Seedpods for fibre.
 <br>
-*once latex leaves the stalks (mid fall)*
+** Once latex leaves the stalks (mid-Autumn) **
 <br>
-harvest when golden,
+Harvest when golden,
 <br>
-after leaves drop.
-. </p>        </div>
+after leaves drop.</p>        </div>
 
 <!-- End of harvest info  -->
 <br>
@@ -91,9 +90,9 @@ after leaves drop.
 
           <h2> Uses </h2>
 
-          <p class="textblock"> fibre from stalk and pods,<br>
-                                food from young buds, <br>
-                                delicacy for monarch caterpillar from sap.
+          <p class="textblock"> Fibre from stalk and pods,<br>
+                                Food from young buds, <br>
+                                Delicacy of sap for monarch caterpillars.
                                </p>        </div>
 <!-- End of uses info -->
 <br>
@@ -106,16 +105,16 @@ after leaves drop.
 
           <h2> Plant Identification </h2>
 
-          <p class="textblock"> <a href="https://gobotany.nativeplanttrust.org/species/asclepias/syriaca/" style="text-decoration: underline;"> Hyperlink to information on identifying common milkweed. </a> </p>        </div>
+          <p class="textblock"> <a href="https://gobotany.nativeplanttrust.org/species/asclepias/syriaca/" style="text-decoration: underline;"> How to identify common milkweed. </a> </p>        </div>
 <!-- End of Plant identification -->
 <br>
 <!-- ORGINS 💌 -->
 
-        <button class="icons" onclick="showhide('orginsinfo')"><p> Orgins<p> </button>
+        <button class="icons" onclick="showhide('orginsinfo')"><p> Origins<p> </button>
         <div id="orginsinfo" class="infoblock" style="display:none">
           <img src="images/orgins.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-          <h2> Orgins </h2>
+          <h2> Origins </h2>
 
           <p class="textblock"> Central North America </p>  </div>
 <!-- End of orgins -->
@@ -129,7 +128,7 @@ after leaves drop.
 
           <h2> Stories </h2>
 
-          <p class="textblock"> Share your stories with milkweed with earthandmapping(at)gmail.com. </p>        </div>
+          <p class="textblock"> Share your stories of milkweed with earthandmapping(at)gmail.com. </p>        </div>
       </div>
 <!-- End of stories -->
 
@@ -137,12 +136,12 @@ after leaves drop.
       <div class= "column_layout" class="infoblock">
 
 <!-- PLANT NAME AND LATIN -->
-          <h1> Milkweed (Asclepias syriaca) </h1>
+          <h1> Milkweed &nbsp; <i>Asclepias syriaca</i> </h1>
       </div>
 
 <!-- EXIT PAGE BUTTONS -->
-          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> ~Keep Walking~</a></button>
-          <button class="gohome"> <a href="map.html">~Back to Map~</a></button>
+          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> <sub>~</sub>Keep Walking<sub>~</sub></a></button>
+          <button class="gohome"> <a href="map.html"><sub>~</sub>Back to Map<sub>~</sub></a></button>
 
     </div>
 
