--- a/index.html
+++ b/index.html
@@ -29,24 +29,24 @@
 
   <h1> Welcome to the digital Means of Production Garden. </h1>
 <p class="explain">
-The garden itself is located on the unceded traditional territories of the Sḵwx̱wú7mesh (Squamish), Səl̓ílwətaʔ/Selilwitulh (Tsleil-Waututh) and xʷməθkʷəy̓əm (Musqueam) Nations at East 6th Street and St. Catherines Street in so-called Vancouver, Canada.
+The physical garden is located on the unceded traditional territories of the Sḵwx̱wú7mesh (Squamish), Səl̓ílwətaʔ/Selilwitulh (Tsleil-Waututh) and xʷməθkʷəy̓əm (Musqueam) Nations at the corner of East 6th Street and St. Catherines Street in so-called Vancouver, Canada.
 <br></br>
-  <br>Like a walk through the garden itself, this digital experience is intended to change with every visit, with new plants to discover each time. Plantings are grouped into four different categories referring to traditional human relationships and uses of the plants found on site. With each visit, one plant from each traditional use is presented. I invite you to click around, scroll and refresh.
+  <br>Like a walk through the garden itself, this digital experience is intended to change with every visit, inviting new plant discoveries each time. Plantings are grouped into four different categories which refer to traditional human-plant relationships or uses. With each visit, one plant from each traditional use is presented. I invite you to click around, scroll and refresh.
 </br>
 </p>
 
 <p class="explain">
 
-  This 1 year project could not possibly hold all of the information about a rich and complex planted 20 year garden. Information that is offered is often vague on purpose, in part to not deny the visitor the learning journey of personal discovery vs overload of information. Also, past challenges of plant theft and vandalism in this public urban space from oversharing leads the core stewards to be cautious in what information is publicly accessible with ease online.
-  Like a true garden, do not expect perfection in the pages that follow, but rather enjoy the whimsy - the flourishes of activity and evidence of energy output in certain areas- and know like any garden this website can truly never be ‘done’.
+  This one-year project could not possibly hold all of the information about a richly and complexly planted twenty-year-old garden. Information that is offered is often vague on purpose, in part to not deny the visitor a sense of personal discovery. Moreso, past challenges of plant theft and vandalism in this public urban space from oversharing has leant the garden's stewards to be cautious aobut what information concerning the garden and its plantings is publicly accessible online.
+  Like a true garden, expect imperfection in the pages that follow. Enjoy the whimsy - the flourishes of activity and evidence of energy output in certain areas - and know like any garden this website is in constant 'growth'.
 <br>
 <br>
-The language this site relies upon is English and Latin for plant names. We are just beginning the process of decolonizing our tongues in how we address and label the plants, and hope this part of the project can grow in the years to come. If you have plant knowledge related to names you would like to see updated and included, please reach out to earthandmapping(at)gmail.com.
+The plant names in the digital garden are currently only Latin for plant names. The next growth of the garden includes the language decolonization of the names of these plants.  If you have plant knowledge related to names you would like to see updated and included, please reach out to earthandmapping(at)gmail.com.
 
 </p>
 
 
-  <button class="entermap" style="top: 500px"> <a href="map.html">~Enter Map~</a></button>
+  <button class="entermap" style="top: 500px"> <a href="map.html"><sub>~</sub>Enter Map<sub>~</sub></a></button>
 
 
 </body>
