--- a/Japanese indigo.html
+++ b/Japanese indigo.html
@@ -36,18 +36,18 @@
 
 <img src="images/care.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-<h2> Care & Maitnence </h2>
+<h2> Care & Maintenance </h2>
 
 <p class="textblock">
 late March: <br>
-Begin seeds indoors
+Begin seeds indoors.
 <br><br>
 May: <br>
-Transplat to garden.<br>
-Fertilize with fish fertilizer or compost tea every 10 days;
+Transplant to the garden.<br>
+Fertilize with fish fertilizer or compost tea every 10 days.
 <br><br>
-Augaust, September:<br>
- clip stems to promote bushiness ~~more leaf production
+August, September:<br>
+ Clip stems to promote bushiness ~~ more leaf production!
  </p>
 
 
@@ -104,11 +104,11 @@ Augaust, September:<br>
 <br>
 <!-- ORGINS 💌 -->
 
-        <button class="icons" onclick="showhide('orginsinfo')"><p> Orgins<p> </button>
+        <button class="icons" onclick="showhide('orginsinfo')"><p> Origins<p> </button>
         <div id="orginsinfo" class="infoblock" style="display:none">
           <img src="images/orgins.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-          <h2> Orgins </h2>
+          <h2> Origins </h2>
 
           <p class="textblock"> Japan. </p>        </div>
 <!-- End of orgins -->
@@ -130,12 +130,12 @@ Augaust, September:<br>
       <div class= "column_layout" class="infoblock">
 
 <!-- PLANT NAME AND LATIN -->
-          <h1> Japanese Indigo (Persicaria tinctoria) </h1>
+          <h1> Japanese indigo &nbsp; <i>Persicaria tinctoria</i> </h1>
       </div>
 
 <!-- EXIT PAGE BUTTONS -->
-          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> ~Keep Walking~</a></button>
-          <button class="gohome"> <a href="map.html">~Back to Map~</a></button>
+          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> <sub>~</sub>Keep Walking<sub>~</sub></a></button>
+          <button class="gohome"> <a href="map.html"><sub>~</sub>Back to Map<sub>~</sub></a></button>
 
     </div>
 
