--- a/Nettle.html
+++ b/Nettle.html
@@ -36,18 +36,18 @@
 
 <img src="images/care.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-<h2> Care & Maitnence </h2>
+<h2> Care & Maintenance </h2>
 
 <p class="textblock">
-Quite independent once established <i> and feisty </i>
+Quite independent once established <span><i> and feisty </i></span>
 <br><br>
 March, April:
 <br>
 Early spring, find runners that are poking into the pathway <br>
 They will sting later in the season if not moved. <br>
 Transplant to new homes.<br>
-trimed stalks, strip of leaves and return to nettle bed.<br>
-Nettle like high nitrogen.
+Trim stalks, strip of leaves and return to nettle bed.<br>
+Nettles like high nitrogen.
  </p>
 
 
@@ -69,7 +69,7 @@ Nettle like high nitrogen.
           <p class="textblock">
 March, April, early spring: <br>
 Harvest for tea and food.<br>
-Don’t take from areas you want for fibre stalks later that season. <br>
+Don’t take from areas you would want for fibre stalks later that season. <br>
 Spring harvest will lead to bifurcation (split growth) leaving inferior fibre stalk.
 <br><br>
 
@@ -78,7 +78,7 @@ Dye.
 <br><br>
 August, Septmber: <br>
 Harvest fibre for cordage<br>
-and, green seeds.
+and green seeds.
 <br><br>
 October, November: <br>
 Harvest for retted fibre.
@@ -97,11 +97,11 @@ Harvest for retted fibre.
 
           <p class="textblock">
   Versatile. <br><br>
-  ~ ✿~ fibre~ ✿~ <br>
-  ~ ✿~ dye~ ✿~ <br>
-  ~ ✿~ Medicine~ ✿~ <br>
-  ~ ✿~ food~ ✿~ ~ ✿~ <br>
-  ~ ✿~ pollinator support~ ✿~
+  ~✿~ fibre ~✿~ <br>
+  ~✿~ dye ~✿~ <br>
+  ~✿~ Medicine ~✿~ <br>
+  ~✿~ food ~✿~ ~✿~ <br>
+  ~✿~ pollinator support ~✿~
  </p>        </div>
 <!-- End of uses info -->
 <br>
@@ -114,18 +114,18 @@ Harvest for retted fibre.
 
           <h2> Plant Identification </h2>
 
-          <p class="textblock"> <a href="https://gobotany.nativeplanttrust.org/species/urtica/dioica/" style="text-decoration:underline;"> Hyperlink to information on identifying stinging nettle.</a> </p>        </div>
+          <p class="textblock"> <a href="https://gobotany.nativeplanttrust.org/species/urtica/dioica/" style="text-decoration:underline;"> How to identify stinging nettle.</a> </p>        </div>
 <!-- End of Plant identification -->
 <br>
 <!-- ORGINS 💌 -->
 
-        <button class="icons" onclick="showhide('orginsinfo')"><p> Orgins<p> </button>
+        <button class="icons" onclick="showhide('orginsinfo')"><p> Origins<p> </button>
         <div id="orginsinfo" class="infoblock" style="display:none">
           <img src="images/orgins.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-          <h2> Orgins </h2>
+          <h2> Origins </h2>
 
-          <p class="textblock"> Across the northern hemisphere </p>        </div>
+          <p class="textblock"> Across the Northern Hemisphere </p>        </div>
 <!-- End of orgins -->
 <br>
 <!-- STORIES 💌 -->
@@ -145,12 +145,12 @@ Harvest for retted fibre.
       <div class= "column_layout" class="infoblock">
 
 <!-- PLANT NAME AND LATIN -->
-          <h1> Stinging nettle (Urtica dioica)</h1>
+          <h1> Stinging nettle &nbsp; <i>Urtica dioica</i></h1>
       </div>
 
 <!-- EXIT PAGE BUTTONS -->
-          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> ~Keep Walking~</a></button>
-          <button class="gohome"> <a href="map.html">~Back to Map~</a></button>
+          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> <sub>~</sub>Keep Walking<sub>~</sub></a></button>
+          <button class="gohome"> <a href="map.html"><sub>~</sub>Back to Map<sub>~</sub></a></button>
 
     </div>
 
