--- a/Nootka rose.html
+++ b/Nootka rose.html
@@ -36,14 +36,14 @@
 
 <img src="images/care.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-<h2> Care & Maitnence </h2>
+<h2> Care & Maintenance </h2>
 
 <p class="textblock">
 March, April, May: <br>
-mulch base<br>
+Mulch base.<br>
 | <br>
 |<br>
-Remove climbing bind weed <br>
+Remove climbing bind weeds. <br>
 | <br>
 | <br>
 P <br>
@@ -83,7 +83,7 @@ P <br>
           <h2> Uses </h2>
 
           <p class="textblock"> Medicinal properties in rosehips.
-            <br> Pollinator friendly </p>        </div>
+              <br><br> Pollinator friendly. </p>        </div>
 <!-- End of uses info -->
 <br>
 <!-- IDENTIFICATION DESCRIPTION 💌 -->
@@ -95,18 +95,18 @@ P <br>
 
           <h2> Plant Identification </h2>
 
-          <p class="textblock"> <a href="http://linnet.geog.ubc.ca/Atlas/Atlas.aspx?sciname=Rosa%20nutkana" style="text-decoration:underline;"> Hyperlink to information on identifying nootka roses.</a> </p>        </div>
+          <p class="textblock"> <a href="http://linnet.geog.ubc.ca/Atlas/Atlas.aspx?sciname=Rosa%20nutkana" style="text-decoration:underline;"> How to identify Nootka roses.</a> </p>        </div>
 <!-- End of Plant identification -->
 <br>
 <!-- ORGINS 💌 -->
 
-        <button class="icons" onclick="showhide('orginsinfo')"><p> Orgins<p> </button>
+        <button class="icons" onclick="showhide('orginsinfo')"><p> Origins<p> </button>
         <div id="orginsinfo" class="infoblock" style="display:none">
           <img src="images/orgins.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-          <h2> Orgins </h2>
+          <h2> Origins </h2>
 
-          <p class="textblock"> Pacific Northwest </p>        </div>
+          <p class="textblock"> Pacific Northwest of North America.</p>        </div>
 <!-- End of orgins -->
 <br>
 <!-- STORIES 💌 -->
@@ -118,7 +118,7 @@ P <br>
 
           <h2> Stories </h2>
 
-          <p class="textblock"> Share your stories of stinging nettle with earthandmapping(at)gmail.com. </p>        </div>
+          <p class="textblock"> Share your stories of Nootka rose with earthandmapping(at)gmail.com. </p>        </div>
       </div>
 <!-- End of stories -->
 
@@ -126,12 +126,12 @@ P <br>
       <div class= "column_layout" class="infoblock">
 
 <!-- PLANT NAME AND LATIN -->
-          <h1> Nootka Rose (Rosa nutkana) </h1>
+          <h1> Nootka Rose &nbsp; <i>Rosa nutkana</i> </h1>
       </div>
 
 <!-- EXIT PAGE BUTTONS -->
-          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> ~Keep Walking~</a></button>
-          <button class="gohome"> <a href="map.html">~Back to Map~</a></button>
+          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> <sub>~</sub>Keep Walking<sub>~</sub></a></button>
+          <button class="gohome"> <a href="map.html"><sub>~</sub>Back to Map<sub>~</sub></a></button>
 
     </div>
 
