--- a/Ocean spray (iron wood).html
+++ b/Ocean spray (iron wood).html
@@ -36,7 +36,7 @@
 
 <img src="images/care.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-<h2> Care & Maitnence </h2>
+<h2> Care & Maintenance </h2>
 
 <p class="textblock"> Year round: prune as required.</p>
 
@@ -56,7 +56,7 @@
 
           <h2> Harvest </h2>
 
-          <p class="textblock"> Spring/summer/fall-harvest from pruning clippings. </p>        </div>
+          <p class="textblock"> Spring/summer/autumn — harvest from pruning clippings. </p>        </div>
 
 <!-- End of harvest info  -->
 <br>
@@ -69,7 +69,7 @@
 
           <h2> Uses </h2>
 
-          <p class="textblock"> Wooden tools needing strength <br>
+          <p class="textblock"> Strengthen wooden tools <br>
                                 in thin straight wood:<br>
                                 knitting needles, <br>
                                 crochet hooks and, <br>
@@ -85,16 +85,16 @@
 
           <h2> Plant Identification </h2>
 
-          <p class="textblock"> <a href="https://linnet.geog.ubc.ca/Atlas/Atlas.aspx?sciname=Holodiscus%20discolor" style="text-decoration:underline;"> Hyperlink to information on identifying ocean spray. </a> </p>        </div>
+          <p class="textblock"> <a href="https://linnet.geog.ubc.ca/Atlas/Atlas.aspx?sciname=Holodiscus%20discolor" style="text-decoration:underline;"> How to identify ocean spray. </a> </p>        </div>
 <!-- End of Plant identification -->
 <br>
 <!-- ORGINS 💌 -->
 
-        <button class="icons" onclick="showhide('orginsinfo')"><p> Orgins<p> </button>
+        <button class="icons" onclick="showhide('orginsinfo')"><p> Origins<p> </button>
         <div id="orginsinfo" class="infoblock" style="display:none">
           <img src="images/orgins.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-          <h2> Orgins </h2>
+          <h2> Origins </h2>
 
           <p class="textblock"> Pacific Northwest of North America. </p>        </div>
 <!-- End of orgins -->
@@ -116,7 +116,7 @@
       <div class= "column_layout" class="infoblock">
 
 <!-- PLANT NAME AND LATIN -->
-          <h1> Ocean Spray, iron wood, cream bush (Holodiscus discolor) </h1>
+          <h1> Ocean Spray, ironwood or cream bush &nbsp; <i>Holodiscus discolor</i> </h1>
       </div>
 
 <!-- EXIT PAGE BUTTONS -->
