--- a/Oregon grape.html
+++ b/Oregon grape.html
@@ -36,9 +36,9 @@
 
 <img src="images/care.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-<h2> Care & Maitnence </h2>
+<h2> Care & Maintenance </h2>
 
-<p class="textblock"> Low maintence. Let it be. </p>
+<p class="textblock"> Low maintence. <i><span>Let it be.</i></span> </p>
 
 
         </div>
@@ -56,7 +56,7 @@
 
           <h2> Harvest </h2>
 
-          <p class="textblock"> Collect berries and bark in midsummer. </p>        </div>
+          <p class="textblock"> Collect berries and bark mid-summer. </p>        </div>
 
 <!-- End of harvest info  -->
 <br>
@@ -82,7 +82,7 @@
 
           <h2> Plant Identification </h2>
 
-          <p class="textblock"> <a href="https://linnet.geog.ubc.ca/Atlas/Atlas.aspx?sciname=Mahonia%20aquifolium&redblue=Both&lifeform=3" style="text-decoration: underline;"> Hyperlink to information on identifying oregon grape.</a> </p>        </div>
+          <p class="textblock"> <a href="https://linnet.geog.ubc.ca/Atlas/Atlas.aspx?sciname=Mahonia%20aquifolium&redblue=Both&lifeform=3" style="text-decoration: underline;"> How to identify Oregon grape.</a> </p>        </div>
 <!-- End of Plant identification -->
 <br>
 <!-- ORGINS 💌 -->
@@ -105,7 +105,7 @@
 
           <h2> Stories </h2>
 
-          <p class="textblock"> Share your stories about oregon grapes with earthandmapping(at)gmail.com. </p>        </div>
+          <p class="textblock"> Share your stories about Oregon grapes with earthandmapping(at)gmail.com. </p>        </div>
       </div>
 <!-- End of stories -->
 
@@ -113,12 +113,12 @@
       <div class= "column_layout" class="infoblock">
 
 <!-- PLANT NAME AND LATIN -->
-          <h1> Oregon Grapes (Mahonia aquifolium)</h1>
+          <h1> Oregon Grapes &nbsp; <i>Mahonia aquifolium</i></h1>
       </div>
 
 <!-- EXIT PAGE BUTTONS -->
-          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> ~Keep Walking~</a></button>
-          <button class="gohome"> <a href="map.html">~Back to Map~</a></button>
+          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> <sub>~</sub>Keep Walking<sub>~</sub></a></button>
+          <button class="gohome"> <a href="map.html"><sub>~</sub>Back to Map<sub>~</sub></a></button>
 
     </div>
 
