--- a/map.html
+++ b/map.html
@@ -3442,7 +3442,7 @@
 	</tr>
 
 
-  <button class="leave" > <a href="finder.html">~Jump to index~</a></button>
+  <button class="leave" > <a href="Finder.html">~Jump to index~</a></button>
   <button class="leave" > <a href="index.html">~Back to entrence~</a></button>
 
 
