--- a/Finder.html
+++ b/Finder.html
@@ -46,7 +46,7 @@
 <br>
 <a href="Fireweed.html">  Fireweed  </a>
 <br>
-<a href="Indigo.html">  Japanese Indigo, Persicaria tinctoria, Dyer's Knotweed  </a>
+<a href="Japanese indigo.html">  Japanese Indigo</a>
 <br>
 <a href="Madder root.html">  Madder Root  </a>
 <br>
