--- a/Finder.html
+++ b/Finder.html
@@ -54,7 +54,7 @@
 <br>
 <a href="Nettle.html">  Nettle  </a>
 <br>
-<a href="Pokeberry.html">  Pokeberry  </a>
+<a href="Poke weed.html">  Poke weed  </a>
 <br>
 <a href="St.john's wort.html">  St. John's Wort  </a>
 <br>
@@ -76,7 +76,7 @@
 
 <h2 class="finderheading">Fibre Plants </h2>
 
-<a href="Blackberry (Himalayan and thornless).html">  Blackberry (Himalayan and Thornless)  </a>
+<a href="Blackberry (himalayan and thornless).html">  Blackberry (Himalayan and Thornless)  </a>
 <br>
 <a href="Dandelion.html">  Dandelion  </a>
 <br>
