--- a/Nettle.html
+++ b/Nettle.html
@@ -25,7 +25,7 @@
 
   <!-- ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ -->
 
-<body ID="frame_test" style="background-image:url(images/nettle2.jpg);">
+<body ID="frame_test" style="background-image:url(images/Nettle2.jpg);">
   <div ID="info">
       <div class="righthandline">
 
