--- a/Tea bush.html
+++ b/Tea bush.html
@@ -25,7 +25,7 @@
 
   <!-- ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ -->
 
-<body ID="frame_test" style="background-image:url(images/tea-bush2.jpg); height: 1200px">
+<body ID="frame_test" style="background-image:url(images/Tea-bush2.jpg); height: 1200px">
   <div ID="info">
       <div class="righthandline">
 
