less work woo hoo

--- a/Finder.html
+++ b/Finder.html
@@ -131,7 +131,7 @@
 <br>
 <a href="Ocean spray (iron wood).html">  Ocean Spray (Iron wood)  </a>
 <br>
-<a href="Spruce.html">  Spruce Tree  </a>
+<a href="Spruce tree.html">  Spruce Tree  </a>
 <br>
 <a href="White ash.html">  White Ash Tree  </a>
 
@@ -155,7 +155,7 @@
 <br>
 <a href="Comfrey.html">  Comfrey  </a>
 <br>
-<a href="Golden Hops.html">  Golden Hops  </a>
+<a href="Golden hops.html">  Golden Hops  </a>
 <br>
 <a href="Elderberry.html">  Elderberry  </a>
 <br>
