--- a/Dill weed.html
+++ b/Dill weed.html
@@ -25,7 +25,7 @@
 
   <!-- ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ -->
 
-<body ID="frame_test" style="background-image:url(images/Dill-weed2.jpg); height:1800px;">
+<body ID="frame_test" style="background-image:url(images/Dill weed2.jpg); height:1800px;">
   <div ID="info">
       <div class="righthandline">
 
