--- a/White ash.html
+++ b/White ash.html
@@ -25,7 +25,7 @@
 
   <!-- ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ -->
 
-<body ID="frame_test" style="background-image:url(images/white-ash2.jpg); height:2000px;">
+<body ID="frame_test" style="background-image:url(images/White-ash2.jpg); height:2000px;">
   <div ID="info">
       <div class="righthandline">
 
